--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Chanasorn Chungmarisakul</h1>
+    <h1>CE-SPD-LAB1</h1>
     <p>Test</p>
     <p>Test</p>
     <p>Test</p>
