--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>CE-SPD-LAB1</h1>
-    <p>Testeeeeeeeeeeeeeeeeeeeeeeeeeeee</p>
-    <p>Testeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee</p>
-    <p>Testeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee</p>
+  <h1>Chanasorn Chungmarisakul</h1>
+  <br>
+  <hr><img src="https://i.pinimg.com/736x/ca/ec/97/caec97d5d9eac7dc8764d0bcad473074.jpg">
 </body>
 </html>
